# SysInfoMonitor

./: .gitignore  CMakeLists.txt  LinuxInfo.cpp  LinuxInfo.h  README.md  Str.cpp  Str.h  SysInfo.cpp  SysInfo.h  SysInfoFactory.h  WindowsInfo.cpp  WindowsInfo.h  main.cpp
